src/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --red: #be2e2e;
    --black: #000000;
    --white: #ffffff;
    --bg: #f0f0f0;
    --bg2: #e9e9e9;
    --bg-orange: #e49257;
    --yellow: #fdc32e;
    --accent: #d0effb;
    --primary: #fea15d;
    --secondary: #ffc8a1;
    --brown: #8d7761;
    --light-brown: #d8cdc6;
    --dark: #363737;

    --shadow-text: 3px 4px 0px var(--black);
    --shadow1: 1px 2px 0px var(--black);
    --shadow2: 2px 3px 0px var(--black);
    --shadow3: 5px 6px 0px var(--black);
}

.teko {
    font-family: "Teko", sans-serif;
}
.tiny5 {
    font-family: "Tiny5", sans-serif;
}
.unselectable {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
body {
    @apply w-screen;
    overflow: hidden;
    font-family: Teko;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    -ms-text-size-adjust: none;
    -webkit-text-size-adjust: none;
    background-color: var(--bg);
}

/* SCROLLBAR */
.scrollbar {
    overflow-y: hidden;
}

.scrollbar-x {
    overflow-x: hidden;
}

.scrollbar-hide::-webkit-scrollbar {
    scrollbar-width: none;
    -ms-overflow-style: none;
    height: 0;
    width: 0;
}
.scrollbar::-webkit-scrollbar,
.scrollbar-x::-webkit-scrollbar {
    height: 5px;
    width: 5px;
}

.scrollbar:hover::-webkit-scrollbar,
.scrollbar-x:hover::-webkit-scrollbar {
    transition: heigth 2s ease;
    height: 5px;
    width: 5px;
}

.scrollbar::-webkit-scrollbar-thumb,
.scrollbar-x::-webkit-scrollbar-thumb {
    background: var(--bg);
    border: 1px solid var(--border);
    border-radius: 5px;
}

/* TEXT */

h1,
h2,
h3,
h4,
h5,
h6,
p {
    color: #000;
    font-weight: 600;
    font-style: normal;
    line-height: 93%; /* 82.77px */
}

h1 {
    font-family: Teko;
    font-size: 89px;
    font-weight: 600;
    line-height: 93%; /* 82.77px */
}

h2 {
    font-size: 42px;
    font-weight: 500;
    line-height: 100%; /* 42px */
}

h3 {
    color: #000;
    font-size: 24px;
    line-height: 93%; /* 22.32px */
}

h4 {
    font-size: 16px;
    font-weight: 500;
    line-height: 80%; /* 12.8px */
    text-transform: uppercase;
}
p {
    font-size: 16px;
    font-weight: 400;
}

.highlight {
    text-shadow: var(--shadow-text);
    -webkit-text-stroke-width: 1.5px;
    -webkit-text-stroke-color: var(--black);
}

.highlight1 {
    text-shadow: var(--shadow1);
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: var(--black);
}

#logo {
    @apply tiny5;
    font-size: 28px;
    font-weight: 400;
    font-style: normal;
    line-height: 80%; /* 22.4px */
    text-transform: uppercase;

    color: #000;
}

/* BUTTONS */
/* SHADOWS */
.shadow {
    box-shadow: var(--shadow-text);
}
.shadow1 {
    box-shadow: var(--shadow1);
}
.shadow2 {
    box-shadow: var(--shadow2);
}
.shadow3 {
    box-shadow: var(--shadow3);
}

/*  Animations */
/* moving */
@keyframes moveRight {
    0% {
        transform: translateX(-50%);
    }
    100% {
        transform: translateX(0%);
    }
}
@keyframes moveLeft {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(-40%);
    }
}
.moveLeft {
    animation: moveLeft 20s linear infinite;
}
.moveRight {
    animation: moveRight 60s linear infinite;
}
/* button animate */
button.shadow1:hover:enabled {
    box-shadow: 2px 3px 0px 0px var(--black);
    transform: translate(-1px, -1px);
}
button.shadow2:hover:enabled,
select.shadow2:hover {
    box-shadow: 4px 5px 0px 0px var(--black);
    transform: translate(-2px, -2px);
}
button.shadow3:hover:enabled {
    box-shadow: 7px 8px 0px 0px var(--black);
    transform: translate(-2px, -2px);
}

button {
    transition:
        transform 0.1s ease-in-out,
        box-shadow 0.1s ease-in-out;
    &:hover:enabled {
        opacity: 1 !important;
    }

    &.shadow1:active:enabled {
        box-shadow: unset !important;
        transform: scale(0.99) translate(2px, 2px) !important;
    }
    &.shadow2:active:enabled {
        box-shadow: unset !important;
        transform: scale(0.99) translate(3px, 3px) !important;
    }
    &.shadow3:active:enabled {
        box-shadow: unset !important;
        transform: scale(0.99) translate(4px, 4px) !important;
    }
}

/* MARKDOWN */

.markdown {
    display: flex;
    flex-direction: column;
    align-items: start;
    gap: 20px;
    & > * {
        white-space: wrap;
    }
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        text-transform: capitalize;
    }
    h2 {
        margin-block: 10px;
    }
    ol {
        list-style: decimal;
    }

    hr {
        display: none;
    }

    ol,
    ul {
        margin-left: 20px;
        gap: 16px;
        display: flex;
        flex-direction: column;
    }
    ul {
        list-style: disc;
        gap: 10px;
    }
    h4,
    h3 {
        margin-top: 30px;
        padding-top: 16px;
    }
    h4 {
        font-size: 18px;
        font-weight: 500;
        line-height: 80%;
        text-transform: uppercase;
    }
    h3 {
        font-weight: 500;
        font-size: 24px;
    }
    p,
    li {
        font-size: 14px;
        font-weight: 500;
        line-height: 150%;
        font-family: Inter, sans-serif;
    }

    pre {
        div,
        span {
            background: var(--bg) !important;
        }
        span {
            margin: 0 !important;
            padding: 0 !important;
        }
        background: var(--bg) !important;
        width: 100%;
        background-color: var(--bg);
        border-radius: 5px;
        border: 1px solid var(--bg2);
        code {
            background: transparent !important;
            @apply w-full;
            line-height: 150%;
            font-size: 14px !important;
            font-family: ui-monospace, SFMono-Regular, "SF Mono", Menlo,
                Consolas, "Liberation Mono", monospace;
        }
    }
}

